# OFER

./: pyproject.toml
ofer/: jobs.py  test.py  trainExpGen.py  trainIdGen.py  trainIdRank.py
ofer/src/: test.py  tester.py  testerrank.py  trainerGenNetwork.py  trainerIdRank.py
ofer/src/datasets/: base_dataset_flame23.py
ofer/src/models/: base_model.py
ofer/src/models/baselinemodels/: flameparamdiffusion_model.py  flameparamrank_model.py
ofer/src/models/network/: flameAttnNetwork.py
