[project]
name = "ofer"
version = "0.0.1"
dependencies = [
    'accelerate==1.8.1',
    'aiohappyeyeballs==2.6.1',
    'aiohttp==3.12.13',
    'aiosignal==1.3.2',
    'albucore==0.0.24',
    'albumentations==2.0.8',
    'annotated-types==0.7.0',
    'async-timeout==5.0.1',
    'attrs==25.3.0',
    'certifi==2025.6.15',
    'charset-normalizer==3.4.2',
    'chumpy==0.70',
    'coloredlogs==15.0.1',
    'contourpy==1.3.0',
    'cycler==0.12.1',
    'cython==3.1.2',
    'easydict==1.13',
    'einops==0.8.1',
    'ema-pytorch==0.7.7',
    'eval-type-backport==0.2.2',
    'filelock==3.13.1',
    'flatbuffers==25.2.10',
    'fonttools==4.58.4',
    'frozenlist==1.7.0',
    'fsspec==2024.6.1',
    'ftfy==6.3.1',
    'hf-xet==1.1.5',
    'huggingface-hub==0.33.1',
    'humanfriendly==10.0',
    'idna==3.10',
    'imageio==2.37.0',
    'importlib-resources==6.5.2',
    'insightface==0.7.3',
    'jinja2==3.1.4',
    'joblib==1.5.1',
    'kiwisolver==1.4.7',
    'lazy-loader==0.4',
    'lightning-utilities==0.14.3',
    'loguru==0.7.3',
    'markupsafe==2.1.5',
    'matplotlib==3.9.4',
    'mpmath==1.3.0',
    'multidict==6.6.2',
    'networkx==3.2.1',
    'numpy==1.26.3',
    'nvidia-cublas-cu11==11.11.3.6',
    'nvidia-cuda-cupti-cu11==11.8.87',
    'nvidia-cuda-nvrtc-cu11==11.8.89',
    'nvidia-cuda-runtime-cu11==11.8.89',
    'nvidia-cudnn-cu11==9.1.0.70',
    'nvidia-cufft-cu11==10.9.0.58',
    'nvidia-curand-cu11==10.3.0.86',
    'nvidia-cusolver-cu11==11.4.1.48',
    'nvidia-cusparse-cu11==11.7.5.86',
    'nvidia-nccl-cu11==2.21.5',
    'nvidia-nvtx-cu11==11.8.86',
    'onnx==1.18.0',
    'onnxruntime==1.19.2',
    'openai-clip==1.0.1',
    'opencv-python==4.11.0.86',
    'opencv-python-headless==4.11.0.86',
    'packaging==25.0',
    'pillow==11.0.0',
    'prettytable==3.16.0',
    'propcache==0.3.2',
    'protobuf==6.31.1',
    'psutil==7.0.0',
    'pydantic==2.11.7',
    'pydantic-core==2.33.2',
    'pyparsing==3.2.3',
    'python-dateutil==2.9.0.post0',
    'pytorch-lightning==2.5.2',
    'pyyaml==6.0.2',
    'regex==2024.11.6',
    'requests==2.32.4',
    'safetensors==0.5.3',
    'scikit-image==0.24.0',
    'scikit-learn==1.6.1',
    'scipy==1.13.1',
    'simsimd==6.4.9',
    'six==1.17.0',
    'stringzilla==3.12.5',
    'sympy==1.13.3',
    'threadpoolctl==3.6.0',
    'tifffile==2024.8.30',
    'torch==2.7.1+cu118',
    'torchaudio==2.7.1+cu118',
    'torchmetrics==1.7.3',
    'torchvision==0.22.1+cu118',
    'tqdm==4.67.1',
    'trimesh==4.6.13',
    'triton==3.3.1',
    'typing-extensions==4.12.2',
    'typing-inspection==0.4.1',
    'urllib3==2.5.0',
    'wcwidth==0.2.13',
    'yacs==0.1.8',
    'yarl==1.20.1',
    'zipp==3.23.0'
]

[tool.setuptools]
packages = { find = {} }
